--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <html>
 <head>
+
+<div id="sfcrpb1bxa8cjatbqcgdcf9dul6fs2pkw3t"></div>
+<script type="text/javascript" src="https://counter2.stat.ovh/private/counter.js?c=rpb1bxa8cjatbqcgdcf9dul6fs2pkw3t&down=async" async></script>
+<noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas com"><img src="https://counter2.stat.ovh/private/contadorvisitasgratis.php?c=rpb1bxa8cjatbqcgdcf9dul6fs2pkw3t" border="0" title="contador de visitas com" alt="contador de visitas com"></a></noscript>
+	
+	
 <meta charset="utf-8">
 <title>Luna de Papel</title>
 <link href="" rel="icon" type="img/jpg">
